# Static_Lib_CMake

./: CMakeLists.txt
ConAppProject/: ConAppProject.cpp
StaticProjectTest/: Header.h  Source.cpp
